[package]
name = "tree-sitter-hl7"
description = "Health Level 7 Messages"
version = "0.1.0"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hl7"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/hamaluik/tree-sitter-hl7"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
