[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-hl7"
description = "Health Level 7 Messages"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "hl7"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Kenton Hamaluik", email = "kenton@hamaluik.ca" }]
requires-python = ">=3.9"
license.text = "Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/hamaluik/tree-sitter-hl7"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
